--- a/backend/backend/.env
+++ b/backend/backend/.env
@@ -9,3 +9,8 @@ DATABASE_HOST = 127.0.0.1
 DATABASE_PORT = 5432
 
 GEOCODER_API = 4eo1d9qsKCZBa6iEm7oHH7cTWF6meW0c
+
+AWS_ACCESS_KEY_ID = AKIAUDVUXAMTDIE3BMCB
+AWS_SECRET_ACCESS_KEY = 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
+AWS_STORAGE_BUCKET_NAME = appopoleisjobs
+AWS_S3_REGION_NAME = us-east-1
