--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
+    "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
     "next": "^13.4.4",
     "react": "18.2.0",
